# OhMyShop

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: rust.yml
.sqlx/: query-220a6466b1abd8786bde797e826e66aef4095ce0ebd7b1333d2bfa10e2a62f30.json  query-c2d55ac3bde23f54bc4116b5449f3d2b9e74a58646dd8745570a3cbb30a6ab4c.json
common/: Cargo.toml
common/src/: client.rs  command.rs  invoice.rs  lib.rs  product.rs
docker/grafana/datasources/: trino.yaml
docker/grafana/plugins/trino-datasource/: MANIFEST.txt  go_plugin_build_manifest  module.js  module.js.map  plugin.json
docker/kafka-connect/config/: s3-sink.json
merger/: Cargo.toml  README.md
merger/src/: client.rs  command.rs  main.rs  product.rs
migrations/: 000_init.sql  001_change_primary_id.sql
producer/: Cargo.toml  README.md
producer/.sqlx/: query-1a8ad74ec2c203fd5743d28dbd76e2003aa705db107b9d0fb7d6ff677c2afbb3.json  query-6b3b7665701caebf91558bb33f92a3ac5dbdfccb03b107f4fac1879e35d216e3.json  query-86bc9f2abf1e986244488ad5da04ce4ed4cb9ed76baa6bb3287322114edb43e0.json  query-a8aa6f67c159e0d8b746668b29ebc89b221fe3aa2f824063c23155fcf8ce0bff.json  query-b8a6f5f6dbaaf9f2d383942cec61bf295bf1cd5d9612dc98a01fec799515ce71.json  query-d19db63a125035ea2035269fe8dd11e50240beb1eea6742b2995c2d3820d9898.json  query-d6afb3675637f628a08d22c0e826f3b80d1702a6c36fae3d0926685ed071dc04.json  query-f49aaed8b22124abf546fff00fb1c5e1d1cd80a21e4b10c82e973023729b4471.json  query-fcd444c0a920416100d8802ff7050a5f253628d9668b1e2d82e2ebd3e508927d.json
producer/src/: client.rs  command.rs  main.rs  product.rs
saver/: Cargo.toml
src/common/: client.rs  command.rs  mod.rs  product.rs
src/merger/: README.md
src/producer/: client.rs  main.rs  order.rs  product.rs
