[package]
name = "OhMyShop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
fake = "3.1.0"
kafka = "0.10.0"
postgres = "0.19.9"
sqlx = {version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"]}
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
tokio-macros = "2.5.0"
serde = { version = "1.0.217", features = ["derive"] }

[[bin]]
name = "producer"
path = "src/producer/main.rs"
test = false

[[bin]]
name = "merger"
path = "src/merger/main.rs"

[[bin]]
name = "saver"
path = "src/saver/main.rs"
