[package]
name = "OhMyShop"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "common",
    "merger",
    "producer",
    "saver"
]

[[bin]]
name = "producer"
path = "src/producer/main.rs"
test = false

[[bin]]
name = "merger"
path = "src/merger/main.rs"

[[bin]]
name = "saver"
path = "src/saver/main.rs"
