[package]
name = "OhMyShop"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "common",
    "merger",
    "producer",
    "saver"
]

[[bin]]
name = "producer"
path = "producer/src/main.rs"
test = false

[[bin]]
name = "merger"
path = "merger/src/main.rs"

[[bin]]
name = "saver"
path = "saver/src/main.rs"
