[package]
name = "merger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
chrono = "0.4.39"
serde_json = "1.0.135"
rdkafka = "0.37.0"
common = { path = "../common" }
sqlx = { version = "0.8.3", features = ["postgres"] }
