[package]
name = "producer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
fake = "3.1.0"
kafka = "0.10.0"
postgres = "0.19.9"
rand = "0.8.5"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
tokio-macros = "2.5.0"
common = { path = "../common" }
async-trait = "0.1.85"
rdkafka = "0.37.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
